Added translated string values for 'Images' and 'Videos'

--- a/mediapickerlib/src/main/res/values-zh-rCN/strings.xml
+++ b/mediapickerlib/src/main/res/values-zh-rCN/strings.xml
@@ -1,6 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">MediaPickerLib</string>
-    <string name="action_settings" translatable="false">Settings</string>
     <string name="images">Images</string>
     <string name="videos">Videos</string>
 </resources>
